fix table size bug
Change in font size caused tables to display horizontal scroll bar.

--- a/main.css
+++ b/main.css
@@ -279,7 +279,7 @@ tbody tr:nth-child(even) {
 }
 
 table {
-	width: 100%;
+	width: 99.9%;
 }
 
 
